--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-EMAIL = "bismarkotu1006@gmail.com"
-PASSWORD = "olimwedzhheuxfce"
-USERNAME = "bismarkotu1006@gmail.com"
+EMAIL = "obwebsitedesign@gmail.com"
+PASSWORD = "mqzcxllgcoprfxia"
+USERNAME = "obwebsitedesign@gmail.com"
 
 EMAIL_CODE_DURATION_IN_MINUTES: int = 15
 ACCESS_TOKEN_EXPIRE_MINUTES: int = 60
@@ -13,8 +13,8 @@ TWILIO_AUTH_TOKEN: str = '7b6c506ee07337cc3d02536d5119c4b2'
 TWILIO_ACCOUNT_SID: str = 'AC959cbde01aced5669b0121ffea2df117'
 
 MAIL_USERNAME="SMART CONFERNECE APP"
-MAIL_PASSWORD="olimwedzhheuxfce"
-MAIL_FROM="bismarkotu1006@gmail.com"
+MAIL_PASSWORD="mqzcxllgcoprfxia"
+MAIL_FROM="obwebsitedesign@gmail.com"
 MAIL_PORT = 587,
 MAIL_SERVER = "smtp.gmail.com",
 MAIL_STARTTLS = True,
