--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,17 @@
-fastapi
-fastapi_jwt_auth
-sqlalchemy
-PyMySQL
-pydantic[email]
-uvicorn
 alembic
-passlib
 bcrypt
+cloudinary==1.24.0
+fastapi==0.92.0
+fastapi_jwt_auth
 fastapi_mail
-starlette
-uuid
+passlib
+pydantic[email]
+PyMySQL
 python-dotenv
 python-multipart
 python-jose[cryptography]
-cloudinary==1.24.0
+starlette
+sqlalchemy==2.0.4
+uuid
+uvicorn==0.20.0
+
