--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,9 @@ TWILIO_PHONE_NUMBER=+16196584362
 TWILIO_AUTH_TOKEN=7b6c506ee07337cc3d02536d5119c4b2
 TWILIO_ACCOUNT_SID=AC959cbde01aced5669b0121ffea2df117
 
-MAIL_USERNAME=obwebsitedesign@gmail.com
-MAIL_PASSWORD=mqzcxllgcoprfxia
-MAIL_FROM=obwebsitedesign@gmail.com
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
 MAIL_PORT=587
 MAIL_SERVER=smtp.gmail.com
 MAIL_STARTTLS=True
