--- a/docker.env.example
+++ b/docker.env.example
@@ -8,7 +8,7 @@ PGADMIN_PORT=2002
 POSTGRES_PORT=2003
 
 PGADMIN_DEFAULT_EMAIL='admin@admin.com'
-PGADMIN_DEFAULT_PASSWORD='changeme'
+PGADMIN_DEFAULT_PASSWORD='openforme'
 
 BASE_URL='http://localhost'
 CLIENT_BASE_URL='http://localhost'
