--- a/app/local.env
+++ b/app/local.env
@@ -1,6 +1,6 @@
 APP_SECRET_STRING=P4ssW0rd
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=P4ssW0rd
+DATABASE_PASSWORD=
 DATABASE=smart_conference_app
 DATABASE_HOST=mysql
 DATABASE_SOCKET=3306
