--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,17 +12,17 @@ services:
     env_file:
       - ./mysql/local.env
     tty: true
-  api:
+  app:
     depends_on:
       - mysql
     container_name: fast_api
     platform: linux/x86_64
-    build: .
+    build: ./app
     restart: unless-stopped
     tty: true
     volumes:
       - ./app:/app
     ports:
-      - 8000:8000
+      - 2020:2020
     env_file:
       - ./app/local.env
