--- a/mysql/local.env
+++ b/mysql/local.env
@@ -1,4 +1,4 @@
 MYSQL_USER=root
-MYSQL_ROOT_PASSWORD=P4ssW0rd
-MYSQL_PASSWORD=P4ssW0rd
+MYSQL_ROOT_PASSWORD=
+MYSQL_PASSWORD=
 MYSQL_DATABASE=smart_conference_app
