--- a/mysql/local.env
+++ b/mysql/local.env
@@ -1,4 +1,4 @@
-MYSQL_USER=root
-MYSQL_ROOT_PASSWORD=
-MYSQL_PASSWORD=
+MYSQL_USER=appuser
+MYSQL_ROOT_PASSWORD=password
+MYSQL_PASSWORD=password
 MYSQL_DATABASE=smart_conference_app
