--- a/mysql/local.env
+++ b/mysql/local.env
@@ -1,4 +1,4 @@
 MYSQL_USER=appuser
 MYSQL_ROOT_PASSWORD=password
-MYSQL_PASSWORD=password
+MYSQL_ALLOW_EMPTY_PASSWORD=password
 MYSQL_DATABASE=smart_conference_app
