--- a/app/local.env
+++ b/app/local.env
@@ -1,6 +1,6 @@
 APP_SECRET_STRING=password
-DATABASE_USERNAME=appuser
+DATABASE_USERNAME=root
 DATABASE_PASSWORD=password
 DATABASE=smart_conference_app
-DATABASE_HOST=mysql
-DATABASE_SOCKET=3306
+DATABASE_HOST=localhost
+DATABASE_SOCKET=3307
