--- a/docker.env.example
+++ b/docker.env.example
@@ -1,6 +1,6 @@
 DB_NAME='smart_conference_app'
-DB_USER='root'
-DB_PASSWORD='password'
+DB_USER='appuser'
+DB_PASSWORD=''
 
 WEB_PORT=2000
 REDIS_PORT=2001
