--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,9 @@ services:
     tty: true
     networks:
       - test_network
+    environment:
+      MYSQL_TCP_PORT: 3131
+    restart: always
 
   app:
     depends_on:
